footer sign up link fix color contrast

--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -21,8 +21,8 @@
             font-weight: 700;
             text-decoration: none;
             text-align: center;
-            color: #062c27;
-            background: linear-gradient(90deg,#00ab6a,#23ea76);
+            color: #fff;
+            background: #008552;
         }
     }
 
