--- a/src/style/general.css
+++ b/src/style/general.css
@@ -606,8 +606,8 @@ img {
   font-weight: 700;
   text-decoration: none;
   text-align: center;
-  color: #062c27;
-  background: linear-gradient(90deg, #00ab6a, #23ea76);
+  color: #fff;
+  background: #008552;
 }
 .footer .footer--nav {
   display: flex;
